# aquarium-light-dimmer

./: .gitignore  LICENSE  README.md  aquarium-cache.lib  aquarium.kicad_pcb  aquarium.pro  aquarium.sch  symbols.dcm  symbols.lib
src/: CMakeLists.txt  Makefile  main.cpp
